// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Тестирование компонента Circle Отрисовка элемента без буквы 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  />
  <div
    className="circle   default"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="testedCircleTail"
  />
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента в состоянии changing 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  />
  <div
    className="circle   changing"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="testedCircleTail"
  />
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента в состоянии default 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  />
  <div
    className="circle   default"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="testedCircleTail"
  />
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента в состоянии modified 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  />
  <div
    className="circle   modified"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="testedCircleTail"
  />
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента с head 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head string"
    data-testid="testedCircleHead"
  >
    A
  </div>
  <div
    className="circle   default"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="testedCircleTail"
  />
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента с index 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  />
  <div
    className="circle   default"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  >
    1
  </p>
  <div
    className="text text_type_input text_color_input mt-4 absolute tail60 element"
    data-testid="testedCircleTail"
  />
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента с react-элементом в head 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  >
    <div
      className="content "
      data-testid="testedCircle"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-testid="testedCircleHead"
      />
      <div
        className="circle   default"
        data-testid="testedCircleColor"
      >
        <p
          className="text text_type_circle text_color_input letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-testid="testedCircleTail"
      />
    </div>
  </div>
  <div
    className="circle   default"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="testedCircleTail"
  />
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента с react-элементом в tail 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  />
  <div
    className="circle   default"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="testedCircleTail"
  >
    <div
      className="content "
      data-testid="testedCircle"
    >
      <div
        className="text text_type_input text_color_input mb-4 absolute head element"
        data-testid="testedCircleHead"
      />
      <div
        className="circle   default"
        data-testid="testedCircleColor"
      >
        <p
          className="text text_type_circle text_color_input letter"
        />
      </div>
      <p
        className="text text_type_input text_color_input mt-4 absolute index"
      />
      <div
        className="text text_type_input text_color_input mt-4 absolute tail30 element"
        data-testid="testedCircleTail"
      />
    </div>
  </div>
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента с tail 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  />
  <div
    className="circle   default"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 string"
    data-testid="testedCircleTail"
  >
    A
  </div>
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента с буквами 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  />
  <div
    className="circle   default"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    >
      A
    </p>
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="testedCircleTail"
  />
</div>
`;

exports[`Тестирование компонента Circle Отрисовка элемента с пропом 'isSmall ===  true' 1`] = `
<div
  className="content "
  data-testid="testedCircle"
>
  <div
    className="text text_type_input text_color_input mb-4 absolute head element"
    data-testid="testedCircleHead"
  />
  <div
    className="circle  small default"
    data-testid="testedCircleColor"
  >
    <p
      className="text text_type_circle text_color_input letter"
    />
  </div>
  <p
    className="text text_type_input text_color_input mt-4 absolute index"
  />
  <div
    className="text text_type_input text_color_input mt-4 absolute tail30 element"
    data-testid="testedCircleTail"
  />
</div>
`;
